# brainbot-discord

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  botconfig.json  brainbot.js  color.json  docker-compose.dev.yaml  docker-compose.lib.yaml  docker-compose.lib.yml  docker-compose.yaml  env  index.js  package-lock.json  package.json  readme.md  shard.js  shrinkwrap.yaml  t.ts  tsconfig.json
.github/workflows/: bot.yml  environment.yml  library.yml  server.yml
__tests__/: guildchannelsroute.test.js  package.json
bot/: CMakeLists.txt  Dockerfile  Dockerfile.dev  Dockerfile.env  Dockerfile.lib
bot/.abuild/libs/DPP/: APKBUILD
bot/.abuild/libs/hiredis/: APKBUILD
bot/.abuild/libs/mongo-c-driver/: APKBUILD
bot/.abuild/libs/mongo-cxx-driver/: APKBUILD
bot/.abuild/libs/redispp/: APKBUILD
bot/includes/: brainbot.h  chatter.h  collector.h  constants.h  dbhelper.h  discordlog.h  listeners.h  mongo.h
bot/includes/xtra/: alert.h
bot/src/: chatter.cpp  dbhelper.cpp  discordlog.cpp  main.cpp
bot/src/listeners/: channelupdate.cpp  guildcreate.cpp  guilddelete.cpp  guildmemberupdate.cpp  keyexpires.cpp  messagecreate.cpp  messageupdate.cpp  ready.cpp
bot/src/xtra/: alert.cpp  collector.cpp
chat/: main.py  package.json  server.ts
chat/src/: chat.js  constants.js  h.ts  index.js  manager.js
chat/src/modules/: blacklist.js  guild.js  hash.js
commands/: botinfo.js  changelog.js  delete.js  eval.js  help.js  invite.js  language.js  setup.js  status.js  upvote.js
gateway/libs/: HttpStatusCodes_C++11.h  brainbot.h
gateway/src/: brainbot.cpp  main.cpp
public/: privacy.txt  terms.txt
server/: Dockerfile  environment.d.ts  package.json  tsconfig.json
server/src/: error.ts  index.ts  typings.d.ts  typings.ts
server/src/constants/: OwnResponse.ts  commands.json  models.json  responses.json  responses.ts  values.json  values.ts
server/src/interaction/: handler.ts  interaction.ts
server/src/managers/: ApplicationCommand.ts  Cache.ts  Collector.ts  Guild.ts  Session.ts
server/src/routes/: index.ts
server/src/schemas/: blacklist.ts  chat.ts  imagine.ts  session.ts
server/src/services/: logger.ts  own.ts  redis.ts
server/src/stablediffusion/: addition.ts  imagine.ts  openjourney.ts  realesrgan.ts  upscale.ts
server/src/txt2img/: addition.ts  imagine.ts  upscale.ts
server/src/types/: http.d.ts
server/src/utils/: colours.json  config.ts  functions.ts  middleware.ts  permissions.ts  res.ts
src/: brainbot.ts  index.ts
src/actions/Client/: debug.ts  rateLimit.ts  ready.ts
src/actions/Guild/: guildCreate.ts  guildDelete.ts
src/actions/Interaction/: interactionCreate.ts
src/actions/Message/: messageCreate.ts
src/actions/Shard/: shardDisconnect.ts  shardError.ts  shardReady.ts  shardReconnecting.ts  shardResume.ts
src/base/: Client.ts  Command.ts
src/commands/: DeleteCommand.ts  EvalCommand.ts  HelpCommand.ts  InfoCommand.ts  PingCommand.ts  SetupCommand.ts  SlashCommand.ts  StatusCommand.ts
src/database/: index.ts
src/helpers/: BlacklistManager.ts  botStatus.ts
src/instance/: Instance.ts  InstanceManager.ts
src/utils/: colors.ts  config.ts  emojis.ts  error.ts  functions.ts  index.ts
stablediffusion/: index.js  prediction.ts
(+31 files in other folders)
